--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ php:
   - 5.4
 
 script:
+  - pecl install mongo
+  - echo "extension=memcache.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
   - composer install --dev && vendor/bin/phpunit --configuration tests/phpunit.xml
 
 services: mongodb
