--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
 
 script:
   - pecl install mongo
-  - echo "extension=memcache.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
+  - echo "extension=mongo.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
   - composer install --dev && vendor/bin/phpunit --configuration tests/phpunit.xml
 
 services: mongodb
