--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require": {
-        "ext-mongo": "1.3.*"
+        "ext-mongo": ">= 1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
